css/style.css
/** INCLUDES **/

@font-face {
  font-family: mont-serra-light;
  src: url("../font/Montserrat-Light.otf") format("opentype");
}

@font-face {
  font-family: mont-serra-bold;
  src: url("../font/Montserrat-Bold.otf") format("opentype");
}

/** GENERAL **/

html{
  background-color: black;
}

body{
  font-family: 'futura-pt', sans-serif;
  margin: 0.5em;
  background-color: white;
  padding: 2em;
}

h1{
  text-transform: uppercase;
  text-align: center;
  font-weight: normal;
  margin-bottom: 0px;
  margin-top: 1em;
  font-family: 'mont-serra-bold', sans-serif;
}

h2{
  font-family: 'mont-serra-light', sans-serif;
  text-align: center;
  font-weight: lighter;
  color: #686767;
  font-size: 14px;
  margin-top: 5px;
}

p{
  font-family: 'mont-serra-light', sans-serif;
}

hr{
  margin-top: 2em;
  margin-bottom: 2em;
}

a{
  text-decoration: none;
  cursor: pointer;
}

.hidden{
  display: none;
}


.light{
  font-family: 'mont-serra-light', sans-serif;
}

/** HEADER **/

.img-header{
  text-align: center;
}

.img-header img{
  width: 55px;
  height: auto;
}

/** NAVBAR **/

.navbar{
  background-color: white;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  height: 75px;
  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
  display: inline-flex;
  z-index: 10;
}

.navbar-left{
  float: left;
  width: 50%;
}

.navbar-left img{
  width: 7.5em;
  height: auto;
  margin-left: 1em;
  padding: 1em;
  display: block;
}

.navbar-right{
  text-align: right;
  float: right;
  width: 50%;
}

.navbar-right a i{
  color: #686767;
  font-size: 24px;
  padding: 0.5em;
  padding-top: 1em;
  display: inline-block;
}

.navbar-right a:hover i{
  color: black;
  transition-duration: 1s
}

.navbar-right a:nth-child(3){
  margin-right: 1em;
}

.navbar-center{
  text-align: center;
}

.toggle-overlay i{
  font-size: 2em;
  color: #686767;
  padding: 0.6em;
  display: block;
}

.toggle-overlay:hover i{
  color: black;
  transition-duration: 1s
}

@media screen and (max-width: 490px) {
  .navbar-left img{
    margin-left: 0em;
  }
  .navbar-right a:nth-child(3){
    margin-right: 0.5em;
  }
}

/* MENU TAGS */

.menu-trigger{
  cursor: pointer;
  text-align: center;
}

nav#slide-menu {
  position: fixed;
  top: 0;
  left: -15em;
  bottom: 0;
  display: block;
  float: left;
  z-index: 2;
  overflow: auto;
  width: 100%;
  max-width: 140px;
  height: 100%;
  -moz-transition: all 300ms;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  border-right: 0.5em solid black;
}
nav#slide-menu > ul {
  display: block;
  padding-top: 25vh;
  margin-left: -1.5em;
  list-style: none;
  opacity: 0.5;
  -moz-transition: all 300ms;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}
nav#slide-menu > ul li {
  color: black;
  padding: 6px 0;
  cursor: pointer;
  font-family: 'mont-serra', sans-serif;
  font-weight: lighter;
  font-size: 12px;
  color: #686767;
  text-transform: uppercase;
}
nav#slide-menu > ul li:hover {
  text-decoration: underline;
}
nav#slide-menu > ul li:before {
  font-family: "ico";
  font-style: normal;
  font-weight: normal;
  speak: none;
  display: inline-block;
  text-decoration: inherit;
  width: 1em;
  color: #59e9df;
  margin-right: 12px;
  text-align: center;
  font-variant: normal;
  font-size: 0.75em;
  text-transform: none;
  line-height: 1em;
}
nav#slide-menu > ul li.sep {
  margin-top: 7px;
  padding-top: 14px;
  border-top: 1px solid #6b7b8d;
}
nav#slide-menu > ul li.timeline:before {
  content: '\e805';
}
nav#slide-menu > ul li.events:before {
  content: '\e802';
}
nav#slide-menu > ul li.calendar:before {
  content: '\e800';
}
nav#slide-menu > ul li.settings:before {
  content: '\e803';
}
nav#slide-menu > ul li.logout:before {
  content: '\e804';
}

body.menu-active nav#slide-menu {
  left: 0px;
  background-color: white;
}

body.menu-active nav#slide-menu ul {
  left: 0px;
  opacity: 1;
}

/** MAIN **/

.nav-tags{
  text-align: center;
}

.nav-tags ul li{
  padding: 0.5%;
  text-transform: uppercase;
  font-family: 'mont-serra-light', sans-serif;
  font-weight: lighter;
  font-size: 10px;
  color: #686767;
  cursor: pointer;
  padding-left: 0px;
}

.nav-tags ul li:hover{
  text-decoration: underline;
}

#instagram{
  text-align: center;
  padding-bottom: 3em;
  -webkit-animation-duration: 1.3s;
  -moz-animation-duration: 1.3s;
  -ms-animation-duration: 1.3s;
  -o-animation-duration: 1.3s;
  animation-duration: 1.3s;

  -webkit-animation-delay: 1.5s;
  -moz-animation-delay: 1.5s;
  -ms-animation-delay: 1.5s;
  -o-animation-delay: 1.5s;
  animation-delay: 1.5s;

}

#instagram:hover img{
  opacity: 0.7;
  -webkit-transition-duration: 0.7s;
  -moz-transition-duration: 0.7s;
  -ms-transition-duration: 0.7s;
  -o-transition-duration: 0.7s;
  transition-duration: 0.7s;
}

#instagram img:hover{
  opacity: 1;
  -webkit-transition-duration: 0.7s;
  -moz-transition-duration: 0.7s;
  -ms-transition-duration: 0.7s;
  -o-transition-duration: 0.7s;
  transition-duration: 0.7s;
}

#instagram a{
  padding: 0.5em;
}

#instagram a img{
  width: 27%;
}

.loadmore{
  text-align: center;
}

.loadmore a{
  font-family: 'mont-serra-light', sans-serif;
  color: #686767;
  font-size: 12px;
  padding: 1em;
  padding-top: 2em;
}

.loadmore a:hover{
  text-decoration: underline;
}

aside {
  position: fixed;
  height: 100%;
  top: 0;
  left: 0;
  background: white;
  opacity: 0;
  visibility: hidden;
  transition: all .5s ease;
  z-index: 2;
  padding: 13%;
}
.open {
  opacity: 0.9;
  visibility: visible;
  z-index: 1000;
  width: 75%;
}
.close {
  position: fixed;
  top: 40px;
  right: 60px;
  color: white;
  z-index: 3;
  cursor: pointer;
  font-family: sans-serif;
}
span.profil,
span.profil:before,
span.profil:after {
  border-radius: 4px;
  height: 5px;
  width: 25px;
  background: black;
  position: absolute;
  display: block;
  content: '';
}
span.profil {
  background: transparent;
}
span.profil:before {
  transform: rotate(45deg);
}
span.profil:after {
  transform: rotate(-45deg);
}
}

.outer-close {
  position: absolute;
  right: 0;
  top: 0;
  width: 85px;
  height: 85px;
  cursor: pointer;
}

aside h2{
  font-size: 32px;
  font-family: mont-serra-bold;
  text-transform: uppercase;
  color: black;
}

aside p{
  font-size: 16px;
  font-family: mont-serra-light;
  color: black;
  text-align-last: center;
  letter-spacing: 1px;
  line-height: 1.7em;
}

aside .contact{
  text-align: center;
}

aside .contact a{
  color: black;
  font-size: 35px;
  padding-top: 1em;
  display: block;
}

aside .contact i:hover{
  color: #686767;
  transition-duration: 1s;
}

/** LIGHTBOX **/

.fancybox-overlay{
  background: rgba(255, 255, 255, 0.6) !important;
}

.fancybox-close{
  display: none;
}

.fancybox-inner{
  width: 100% !important;
  height: auto !important;
}

.fancybox-wrap{
  border: 0;
}

.fancybox-skin{
  background: white;
  padding: 10px !important;
}

.fancybox-lock .fancybox-overlay {
  overflow: hidden;
  overflow-y: hidden;
}

body > div.fancybox-overlay.fancybox-overlay-fixed > div{
  width: auto !important;
}

/** FOOTER **/

.site-footer{
  text-align: center;
}

.site-footer p{
  font-weight: lighter;
  font-size: 12px;
  color: #686767;
}

.site-footer a i{
  color: #686767;
  font-size: 24px;
  padding: 10px;
}

.site-footer a:hover i{
  color: black;
  transition-duration: 1s
}

/** MEDIA QUERIES **/

@media screen and (max-width: 700px){
  body > div.fancybox-overlay.fancybox-overlay-fixed > div{
    left: 10px !important;
    right: 10px !important;
  }
}

@media screen and (max-width: 800px){
  #instagram:hover img{
    opacity: 1;
  }
}

@media screen and (max-width: 900px) {
  #instagram a img{
    width: 40%;
  }
}

@media screen and (max-width: 490px) {
  #instagram a img{
    width: 100%;
    display: block;
  }

  aside h2{
    font-size: 25px !important;
  }

  aside p{
    font-size: 12px !important;
    margin-bottom:0px;
  }

  aside .contact a{
    padding: 0em;
  }

}

@media screen and (max-width: 967px){
  #tags{
    display: none;
  }
}

